<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/vector_news"
        android:title="@string/news" />
    <item
        android:id="@+id/booksFragment"
        android:icon="@drawable/vector_books"
        android:title="@string/books" />
    <item
        android:id="@+id/audiosFragment"
        android:icon="@drawable/vector_audio"
        android:title="@string/audio" />
    <item
        android:id="@+id/videosFragment"
        android:icon="@drawable/vector_video"
        android:title="@string/practices" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/vector_account"
        android:title="@string/account" />
</menu>